manifests/components/keycloak/22.1.2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-ingress
spec:
  rules:
  - host: hostname.replacethis
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
  tls:
    - hosts:
      - hostname.replacethis
      secretName: kc-cert
